chore: add ha addon config

--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-daemon off;
+# daemon off;
 error_log stderr;
 pid /var/run/nginx.pid;
 
@@ -41,12 +41,11 @@ http {
         ssl_certificate_key /ssl/proxy.key;
 
         # dhparams file
-        ssl_dhparam /data/dhparams.pem;
+        # ssl_dhparam /data/dhparams.pem;
 
         listen 443 ssl;
         http2 on;
 
-           
         location / {
             root   /app;
             index  index.html;
