--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -1,22 +1,21 @@
-# daemon off;
-error_log stderr;
+user nginx;
+worker_processes 1;
+error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
+  worker_connections  1024;
 }
 
 http {
-    map_hash_bucket_size 128;
-
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        ''      close;
-    }
-
-    server_tokens off;
-
-    server_names_hash_bucket_size 128;
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+  access_log  /var/log/nginx/access.log  main;
+  sendfile        on;
+  keepalive_timeout  65;
     
     # intermediate configuration
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -33,6 +32,7 @@ http {
 
     server {
         server_name localhost;
+        listen 443 ssl;
 
         ssl_session_timeout 1d;
         ssl_session_cache shared:MozSSL:10m;
@@ -43,8 +43,6 @@ http {
         # dhparams file
         # ssl_dhparam /data/dhparams.pem;
 
-        listen 443 ssl;
-        http2 on;
 
         location / {
             root   /app;
